# chirality

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  healthcheck.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
assets/: style.css
docs/: CLAUDE_CONTEXT.md  asset_manifest.md  baseline_audit.md  demo_script.md  deployment_huggingface.md  deployment_local.md  final_1_hour_polish_report.md  final_2_minute_demo_script.md  final_5_minute_script.md  final_5_slide_deck.md  final_pdf_switch_report.md  final_readiness_report.md  final_slide_export_notes.md  final_slide_speaker_notes.md  final_streamlit_deploy_report.md  final_submit_checklist.md  judge_readme.md  limitations.md  llm_proficiency.md  model_library_notes.md  model_notes.md  project_brief.md  prompt_log.md  reference_sources.md  science_notes.md  scientific_audit.md  self_audit.md  speaker_script.md  star_ascidian_model_notes.md  tutorial_connections.md  tutorial_mapping.md  ui_design_notes.md
notebooks/: Chirality_Atlas_Colab.ipynb  Star_Ascidian_Chirality_Atlas.ipynb
scripts/: 00_audit_project.py  01_run_reference_models.py  02_run_star_ascidian_demo.py  03_run_phase_diagram.py  04_make_movies.py  05_make_all_assets.py  06_final_smoke_test.py  _build_notebook.py  make_all_assets.py  make_pptx.py  make_summary_panels.py  make_video.py  make_visual_rescue.py  run_particle_demo.py  run_pattern_demo.py  run_phase_sweeps.py  smoke_test.py
src/chirality/: __init__.py  config.py  export.py  particle_metrics.py  particle_sim.py  plotting.py  (+6 more)
tests/: test_imports.py  test_model_library.py
(+20 files in other folders)
