[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "chirality-atlas"
version = "0.1.0"
description = "Chirality Atlas: Particles, Patterns, and Handedness in Active Matter"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "scipy>=1.11",
    "Pillow>=10.0",
    "imageio>=2.31",
]

[tool.setuptools.packages.find]
where = ["src"]
